add debug in vscode add webpack fix code to work with webpack

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
                 "target": {
                     "node": "current"
                 },
-                "useBuiltIns": true
+                "exclude": ["transform-regenerator"]
             }
         ]
     ],
