--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --display-optimization-bailout",
-    "start-prod": "cross-env NODE_ENV=production webpack --config webpack.config.js --display-optimization-bailout && node ./dist/index.js",
-    "start": "node ./src/index.js",
+    "start": "cross-env NODE_ENV=production webpack --config webpack.config.js --display-optimization-bailout && node --inspect=5858 dist",
+    "start-dev": "node --inspect=5858 src",
     "eslint": "eslint ./src/**/*.js"
   },
   "author": "",
@@ -15,11 +15,14 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "bluebird": "^3.5.0",
     "cross-env": "^5.0.1",
     "eslint": "^4.1.1",
     "eslint-plugin-babel": "^4.1.1",
-    "inquirer": "^3.1.1"
+    "inquirer": "^3.1.1",
+    "webpack": "^3.0.0"
   }
 }
